--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">AnimatorFragment</string>
-    <string name="show_another_fragment">ShowAnotherFragment</string>
-    <string name="call_back">返回</string>
+    <string name="show_another_fragment">next</string>
+    <string name="call_back">back</string>
 </resources>
